@@ -11,6 +11,8 @@
 	* bugfix #166: Grow buffer when writing chars and fixed size
 	  strings when converting to presentation format, preventing
 	  potential assersion errors.
+	* bugfix #46: Print failed to get packet instead of null when
+	  secure tracing with drill. Thanks reedjc
 
 1.8.1	2021-12-03
 	* bugfix #146: ldns-1.7.1 had soname 3.0, so ldns-1.8.x soname
